Fix T78134: GPencil interpolation crash

Need to verify active frame not NULL.